--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "inversify": "^6.0.2",
     "mongoose": "^8.3.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.2.2",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
