--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "my-library",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon -L ."
+    "copy-assets": "ts-node src/tools/copyAssets.ts",
+    "dev": "nodemon -L --watch src -e ts,ejs --exec \"npm run dev-start\"",
+    "dev-start": "npm-run-all build start",
+    "tsc": "tsc -p ./tsconfig.json",
+    "build": "npm-run-all tsc copy-assets"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +27,14 @@
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/shelljs": "^0.8.15",
     "nodemon": "^3.1.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.7",
+    "shelljs": "^0.8.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
