--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "@types/shelljs": "^0.8.15",
     "nodemon": "^3.1.0",
     "npm-run-all": "^4.1.5",
